<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/lista_novelas"
        android:textSize="20sp"
        android:textStyle="bold"

    />

    <EditText
        android:id="@+id/editTextTitle"

        android:layout_width="200sp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:hint="@string/titulo"

    />

    <EditText
        android:id="@+id/editTextAuthor"

        android:layout_width="200sp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:hint="@string/autor"

        />

    <EditText
        android:id="@+id/editTextCountry"

        android:layout_width="200sp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextAuthor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:hint="@string/country"

        />

    <EditText
        android:id="@+id/editTextEditorial"

        android:layout_width="200sp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextCountry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:hint="@string/editorial"

        />

    <EditText
        android:id="@+id/editTextPrice"

        android:layout_width="100sp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextEditorial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:hint="@string/price"

        />

    <EditText
        android:id="@+id/editTextYear"

        android:layout_width="100sp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:hint="@string/year"

        />

    <Button
        android:id="@+id/buttonAdd"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextYear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/add"
    />

    <ListView
        android:id="@+id/listView01"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/buttonAdd"

    />



</RelativeLayout>